<resources>
    <string name="app_name">Help Me Around</string>
    <string name="help_me_around">Help Me \n Around</string>
    <string name="fName">First name</string>
    <string name="lName">Last name</string>
    <string name="mobileNo">Mobile No.</string>
    <string name="type">Type</string>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="entered">Vendor entered</string>
    <string name="email">Email (Optional)</string>
    <string name="address">Address (Optional)</string>
    <string name="password">Password</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="alreadyMember"><u>Already a member? Login</u></string>
    <string name="fieldNotBlank">This field cannot be blank.</string>
    <string name="isStatic">Is Static</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="updateLocation">Update location as move</string>
    <string name="retry">RE-TRY</string>
    <string name="amSure">I\'M SURE</string>
    <string name="detailEntered"> Vendor you are waiting for arrived into your society.</string>

    <!-- Strings related to login -->
    <string name="prompt_mobile">Mobile No.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permissionDenied">Permission Denied</string>
    <string name="readPermissionDenied">Without location permission application will not work properly.</string>
    <string name="loginRegister">Login as vendor</string>
    <string name="alert">Alert</string>
    <string name="congratulations">Congratulations</string>
    <string name="successReg">Successfully registered. Please login to get business.</string>
    <string name="logout">LOGOUT</string>
</resources>
