<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/medium_padding">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_me_around"
            android:paddingTop="40dp"
            android:textSize="30sp"
            android:paddingBottom="20dp"
            android:textColor="@color/gray_600"
            android:textStyle="bold"
            android:gravity="center"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/LoginCardView">
                    <LinearLayout
                        android:id="@+id/email_register_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/medium_padding"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/gray_600"
                            android:paddingTop="@dimen/small_padding"
                            android:paddingBottom="@dimen/medium_padding"
                            android:paddingRight="@dimen/medium_padding"
                            android:textSize="@dimen/x_large_txt_size"
                            android:text="@string/register"/>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_firstName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/fName"
                                android:textSize="@dimen/regular_txt_size"
                                android:textColor="@color/black"/>

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_lastName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/regular_txt_size"
                                android:hint="@string/lName"
                                android:textColor="@color/black"/>

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <EditText
                                android:id="@+id/edt_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/regular_txt_size"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:textColor="@color/black"/>
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_mobile"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/mobileNo"
                                android:textSize="@dimen/regular_txt_size"
                                android:inputType="number"
                                android:textColor="@color/black"
                                android:layout_weight="1" />

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/regular_txt_size"
                                android:hint="@string/email"
                                android:textColor="@color/black"/>

                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/edt_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/regular_txt_size"
                                android:hint="@string/type"
                                android:clickable="true"
                                android:textColor="@color/black"/>

                        </android.support.design.widget.TextInputLayout>

                        <CheckBox
                            android:id="@+id/chk_isStatic"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/medium_padding"
                            android:text="@string/isStatic"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_createAccount"
                    android:onClick="onClick"
                    style="@style/LoginButton"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/createAccount"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alreadyMember"
                    android:padding="@dimen/medium_padding"
                    android:clickable="true"
                    android:gravity="center"/>
            </LinearLayout>
    </LinearLayout>
    </ScrollView>
